完成 第一课 最后一部分

--- a/_posts/2016-05-29-理解Ruby中的True.md
+++ b/_posts/2016-05-29-理解Ruby中的True.md
@@ -69,8 +69,36 @@ tags: [ 'Effective Ruby' ]
 	true.class 		# => TrueClass
 	false.class		# => FalseClass
 	```
-	
 
+3. 	将false作为 “==” 的左操作符
+
+	因为false放在左边时，其实执行的是 FalseClass#==
+	
+	而放在右边的时候，如果左边是一个Object，那么实际上执行的是 Object#==
+	
+	这样看起来，感觉不到两者的区别所在
+	
+	书上举了这样的一个例子，很好地说明了两者的区别
+	
+	```
+	class Bad
+  	  def == other
+    	true
+  	  end
+	end
+
+	false == Bad.new 
+	#=> false
+
+	Bad.new == false 
+	#=> true
+	```
+	
+	很容易理解，对于Bad类来说 == 方法，被重写了，任何情况都返回 true。
+	
+	所以为了得到正确的结果，建议将false写在 == 符号的左边。
 	
 	
-# 未完……
+	
+	
+	
