--- a/_posts/2016-05-29-理解Ruby中的True.md
+++ b/_posts/2016-05-29-理解Ruby中的True.md
@@ -13,11 +13,13 @@ tags: [ 'Effective Ruby' ]
 	> 除了false和nil，其他值都是真值。
 	
 	任何对象非false，非nil，该对象一定是真值。
+
+	<!--more--> 
 	
 	再记录点其他内容：
 	
 	* nil? ： 只有一种情况为真：
-		
+
 		
 	```
 	nil.nil? 	#=> true
