增加 摘要处理

--- a/_posts/2016-06-01-所有对象的值都可能为nil.md
+++ b/_posts/2016-06-01-所有对象的值都可能为nil.md
@@ -12,6 +12,8 @@ tags: [ 'Effective Ruby' ]
   
 	结合《Ruby元编程》上的内容，得到如下图所示的一张关系图：
   
+  <!--more--> 
+  
 ![Ruby中的类]({{ site.url }}/assets/20160601/object-and-class-in-ruby.jpg "对象与类")
 
 * #### 对象为nil时
