增加 摘要分割线

--- a/_posts/2016-06-05-避免使用Ruby中古怪的Perl风格语法.md
+++ b/_posts/2016-06-05-避免使用Ruby中古怪的Perl风格语法.md
@@ -8,6 +8,7 @@ tags: [ 'Effective Ruby' ]
 
 Ruby中很多的语法风格都受到Perl语言影响，其中就包括"$"开头的全局变量。常见的有以下这些：
 
+<!--more--> 
 
  $| | |
 ------------| --------------| --------------|
